--- a/public/tv.html
+++ b/public/tv.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Print #printed only</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <style>
     html, body {
