--- a/public/tv.html
+++ b/public/tv.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Print #printed only</title>
+  <title>Print #printed with dithering</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-    } 
+    }
     #printed {
       width: 656px;
       height: 1310px;
@@ -38,7 +38,7 @@
 
   <div id="printed">
     <p>이 영역만 출력됩니다.</p>
-    <img src="img/PHO00014.jpg" style="width:100%;">
+    <img id="dithered" src="img/PHO00014.jpg" style="width:100%;">
   </div>
 
   <canvas id="previewCanvas" width="656" height="1310"></canvas>
@@ -46,21 +46,78 @@
   <button onclick="captureAndPrint()">프린트하기</button>
 
   <script>
-    function captureAndPrint() {
-      const target = document.getElementById('printed');
-      const canvas = document.getElementById('previewCanvas');
+    function floydSteinbergDither(img, callback) {
+      const canvas = document.createElement("canvas");
+      const ctx = canvas.getContext("2d");
 
-      html2canvas(target, {
-        width: 656,
-        height: 1310,
-        scale: 1
-      }).then(capturedCanvas => {
-        const ctx = canvas.getContext('2d');
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.drawImage(capturedCanvas, 0, 0, 384, 912);
+      img.onload = () => {
+        canvas.width = img.width;
+        canvas.height = img.height;
+        ctx.drawImage(img, 0, 0);
+
+        const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        const data = imageData.data;
+        const width = canvas.width;
+        const height = canvas.height;
+
+        for (let y = 0; y < height; y++) {
+          for (let x = 0; x < width; x++) {
+            const i = (y * width + x) * 4;
+            const oldPixel = data[i] * 0.3 + data[i + 1] * 0.59 + data[i + 2] * 0.11;
+            const newPixel = oldPixel < 128 ? 0 : 255;
+            const error = oldPixel - newPixel;
+
+            data[i] = data[i + 1] = data[i + 2] = newPixel;
+
+            function distributeError(ix, iy, factor) {
+              if (ix >= 0 && ix < width && iy >= 0 && iy < height) {
+                const j = (iy * width + ix) * 4;
+                data[j] += error * factor;
+                data[j + 1] += error * factor;
+                data[j + 2] += error * factor;
+              }
+            }
+
+            distributeError(x + 1, y, 7 / 16);
+            distributeError(x - 1, y + 1, 3 / 16);
+            distributeError(x, y + 1, 5 / 16);
+            distributeError(x + 1, y + 1, 1 / 16);
+          }
+        }
+
+        ctx.putImageData(imageData, 0, 0);
+        callback(canvas.toDataURL());
+      };
+    }
+
+    function captureAndPrint() {
+      const img = document.getElementById("dithered");
+
+      const cloned = new Image();
+      cloned.crossOrigin = "anonymous";
+      cloned.src = img.src;
+
+      floydSteinbergDither(cloned, (ditheredDataUrl) => {
+        img.src = ditheredDataUrl;
+
+        // 이미지가 교체된 후 캡처
         setTimeout(() => {
-          window.print();
-        }, 300); // 인쇄 직전에 렌더링 완료 대기
+          const target = document.getElementById('printed');
+          const canvas = document.getElementById('previewCanvas');
+          html2canvas(target, {
+            width: 656,
+            height: 1310,
+            scale: 1
+          }).then(capturedCanvas => {
+            const ctx = canvas.getContext('2d');
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.drawImage(capturedCanvas, 0, 0, 656, 1310);
+
+            setTimeout(() => {
+              window.print();
+            }, 300);
+          });
+        }, 500); // 이미지 렌더링 완료 후 html2canvas 실행
       });
     }
   </script>
