--- a/public/tv.html
+++ b/public/tv.html
@@ -36,6 +36,10 @@
         width: 656px;
         height: 1310px;
       }
+
+      #dithered {
+        width: 656px;
+      }
     }
   </style>
 </head>
