--- a/public/tv.html
+++ b/public/tv.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <div id="printed">
-    <h2>디더링 적용 이미지</h2>
+    <h2>Sol–Ra.dio</h2>
     <img id="dithered" src="img/PHO00014.jpg">
   </div>
 
@@ -53,7 +53,7 @@
   
   <script>
     function floydSteinbergDither(image, callback) {
-      const targetWidth = 384;
+      const targetWidth = 656;
       const scale = targetWidth / image.width;
       const targetHeight = Math.floor(image.height * scale);
 
