--- a/public/tv.html
+++ b/public/tv.html
@@ -38,10 +38,10 @@
       }
 
       .d1 {
-        width: 46mm;
+        width: 656px;
       }
       .d2 {
-        width: 48mm;
+        width: 100%;
       }
       .d3 {
         width: 56mm;
@@ -57,8 +57,6 @@
     <h2>Sol–Ra☀︎dio</h2>
     <img class="dithered d1" src="img/PHO00014.jpg">
     <img class="dithered d2" src="img/PHO00014.jpg">
-    <img class="dithered d3" src="img/PHO00014.jpg">
-    <img class="dithered d4" src="img/PHO00014.jpg">
 
   </div>
 
