--- a/public/tv.html
+++ b/public/tv.html
@@ -54,15 +54,16 @@
 <body>
   <div id="printed">
     <h1>Sol–Ra☀︎dio</h1>
-    <img class="dithered d1" src="img/PHO00014.jpg">
-    <img class="dithered d2" src="img/PHO00014_2.jpg">
+    <!-- <img class="dithered d1" src="img/PHO00014.jpg">
+    <img class="dithered d2" src="img/PHO00014_2.jpg"> -->
+    <img class="dithered d2" src="img/test.jpg">
   </div>
 
   <button onclick="window.print()">🖨 프린트하기</button>
   
   <script>
     function floydSteinbergDither(image, callback) {
-      const targetWidth = 350;
+      const targetWidth = 480;
       const scale = targetWidth / image.width;
       const targetHeight = Math.floor(image.height * scale);
 
