--- a/public/tv.html
+++ b/public/tv.html
@@ -13,14 +13,43 @@
       background: lemonchiffon;
     }
 
+    .Block {
+      /* place-items: center;
+      position: fixed;
+      top: 20px;
+      left: 50%;
+      width: 100%;
+      height: 500px;
+      margin: 0;
+      padding: 0;
+      aspect-ratio: 300 / 200;
+      -webkit-transform: translate(-50%, 0);
+      -moz-transform: translate(-50%, 0); 
+      -ms-transform: translate(-50%, 0); 
+      -o-transform: translate(-50%, 0); 
+      transform: translate(-50%, 0);
+      border: none; */
+
+      aspect-ratio: 16 / 9; /* 원하는 비율로 설정 */
+  width: 100%; /* 또는 고정값 */
+  overflow: hidden;
+  position: relative;
+    }
+
     img {
       width: 100%;
       mix-blend-mode: multiply;
-    }
 
-    #targetArea {
       width: 100%;
-      /* border: 10px solid black; */
+  height: 100%;
+  object-fit: cover;
+  display: block;
+      /* position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover; */
     }
 
     h1 {
@@ -44,6 +73,10 @@
         left: 0;
         width: 656px;
         height: 1310px;
+      }
+
+      .Block {
+        aspect-ratio: auto;
       }
 
       h1 {
