--- a/public/tv.html
+++ b/public/tv.html
@@ -14,11 +14,14 @@
     }
 
     .Block {
+      mix-blend-mode: multiply;
+    }
+
+    .img_container {
       position: relative;
       width: 100%;
       aspect-ratio: 16 / 9;
       overflow: hidden;
-      mix-blend-mode: multiply;
     }
 
     img {
@@ -28,11 +31,10 @@
       object-fit: cover;
     }
 
-    .Block_title {
-      position: fixed;
-      mix-blend-mode: difference;
-      color: white;
-      font-size: 40px;
+    textarea {
+      width: 100%;
+      font-size: 20px;
+      text-align: center;
     }
 
     h1 {
