--- a/public/tv.html
+++ b/public/tv.html
@@ -33,7 +33,7 @@
 
     textarea {
       width: 100%;
-      font-size: 20px;
+      font-size: 16px;
       text-align: center;
     }
 
@@ -62,6 +62,10 @@
 
       .img_container {
         aspect-ratio: auto;
+      }
+
+      textarea {
+        font-size: 36px;
       }
 
       h1 {
