--- a/public/tv.html
+++ b/public/tv.html
@@ -29,6 +29,11 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      filter: grayscale(1);
+
+      position: absolute;
+      top: 0;
+      left: 0;
     }
 
     textarea {
@@ -45,11 +50,11 @@
 
     @media print {
       body * {
-        display: none !important;
+        display: none;
       }
 
       #targetArea, #targetArea * {
-        display: block !important;
+        display: block;
       }
 
       #targetArea {
@@ -60,8 +65,16 @@
         height: 1310px;
       }
 
+      img {
+        position: static;
+      }
+
       .img_container {
         aspect-ratio: auto;
+      }
+
+      .noise {
+        display: none !important;
       }
 
       textarea {
