--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <!-- <link rel="manifest" href="/manifest.json" /> -->
+  <link rel="manifest" href="/manifest.json" />
 
   <link id="favicon" rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90' fill='white'>☼</text></svg>">
 
