--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,8 @@
   <!-- JS -->
   <!-- ====================================================== -->
   <script src="https://sdk.scdn.co/spotify-player.js"></script>
-  <!-- <script src="index.js"></script> -->
-  <script src="index_demo.js"></script>
+  <script src="index.js"></script>
+  <!-- <script src="index_demo.js"></script> -->
   <!-- <script src="playlist.js"></script>
   <script type="text/javascript" src="tv.js"></script> -->
   
