--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
   <!-- ================================================ -->
   <audio id="noise-audio" autoplay src="sound/noise_short.mp3"></audio>
 
-
+  <div></div>
   <!-- ====================================================== -->
   <!-- JS -->
   <!-- ====================================================== -->
