--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
   <link rel="stylesheet" href="tv.css">
   <link rel="stylesheet" href="index_media.css">
 
-  <link rel="stylesheet" href="font_demo.css">
+  <!-- <link rel="stylesheet" href="font_demo.css">
   <link rel="stylesheet" href="index_demo.css">
-  <link rel="stylesheet" href="playlist_demo.css">
+  <link rel="stylesheet" href="playlist_demo.css"> -->
 </head>
 
 <body>
@@ -70,13 +70,13 @@
   <!-- ================================================ -->
   <audio id="noise-audio" autoplay src="sound/noise_short.mp3"></audio>
 
-  <div></div>
+
   <!-- ====================================================== -->
   <!-- JS -->
   <!-- ====================================================== -->
   <script src="https://sdk.scdn.co/spotify-player.js"></script>
-  <!-- <script src="index.js"></script> -->
-  <script src="index_demo.js"></script>
+  <script src="index.js"></script>
+  <!-- <script src="index_demo.js"></script> -->
   <!-- <script src="playlist.js"></script>
   <script type="text/javascript" src="tv.js"></script> -->
   
